// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleSuggestion should display RuleSuggestion 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="avatar"
    >
      <div
        class="component hasImage square"
        style="width: 36px; height: 36px;"
      >
        <div
          class="initials"
          style="width: 36px; height: 36px; font-size: 15px;"
        >
          <span
            style="line-height: 38px;"
          >
            GT
          </span>
        </div>
        <img
          alt="avatar"
          class="gravatar"
          src="/assets/img/icons/gorgias-icon-logo-white.png"
        />
      </div>
    </div>
    <header
      class="container"
      style="padding-bottom: 8px;"
    >
      <div
        class="infoContainer"
      >
        <div
          class="title"
        >
          <span>
            Gorgias Tips
          </span>
          <span>
            Only visible to you
          </span>
        </div>
        <span
          class="info"
        >
          Automate this ticket with the
           
          <a
            href="/app/automation/rules/library?rule-recipe-fixture"
            rel="noreferrer"
            target="_blank"
          >
            my rule
          </a>
           
          rule! 
          <span>
            Here’s a preview:
          </span>
        </span>
      </div>
      <div
        class="actionsContainer"
      >
        <div
          class="buttons"
        >
          <div
            id="rule-suggestion-install-button"
          >
            <button
              aria-disabled="false"
              class="wrapper fill secondary small"
              type="button"
            >
              Install Rule
            </button>
          </div>
          <button
            aria-disabled="false"
            class="wrapper fill primary small"
            type="button"
          >
            Apply Rule & Send
          </button>
        </div>
      </div>
      <div
        class="chevron"
      >
        <i
          class="material-icons-round"
        >
          expand_less
        </i>
      </div>
    </header>
    <div
      class="container collapse"
      style="display: block; height: 175px;"
    >
      <div>
        <div
          class="text"
        >
          <div>
            <div>
              Text coming from rule suggestion
            </div>
          </div>
        </div>
        <div>
          <div
            class="component action"
          >
            <div
              class="d-flex justify-content-between align-items-baseline"
            >
              <div
                class="flex-grow"
              >
                <div
                  class="d-flex align-items-center flex-wrap"
                >
                  <div
                    class="title"
                  >
                    <i
                      class="material-icons md-3 mr-1 text-secondary"
                    >
                      label
                    </i>
                    <span>
                      Add tags
                    </span>
                  </div>
                  <div
                    class="spacer"
                  />
                  <div
                    class="tagsSelect"
                  >
                    <div
                      class="d-none d-md-inline-flex align-items-center flex-wrap mr-2 mb-1 justify-content-end"
                    >
                      <span
                        class="badge-tag tagLabel badge badge-secondary"
                        style="color: rgb(128, 136, 214);"
                      >
                        <span>
                          auto-close
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="fadeLayer"
    >
      <div
        class="expandButton"
      >
        <button
          aria-disabled="false"
          class="wrapper ghost secondary medium"
          type="button"
        >
          Expand
          <i
            class="material-icons-round"
          >
            expand_more
          </i>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleSuggestion should display in preview for large suggestion body 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="avatar"
    >
      <div
        class="component hasImage square"
        style="width: 36px; height: 36px;"
      >
        <div
          class="initials"
          style="width: 36px; height: 36px; font-size: 15px;"
        >
          <span
            style="line-height: 38px;"
          >
            GT
          </span>
        </div>
        <img
          alt="avatar"
          class="gravatar"
          src="/assets/img/icons/gorgias-icon-logo-white.png"
        />
      </div>
    </div>
    <header
      class="container"
      style="padding-bottom: 8px;"
    >
      <div
        class="infoContainer"
      >
        <div
          class="title"
        >
          <span>
            Gorgias Tips
          </span>
          <span>
            Only visible to you
          </span>
        </div>
        <span
          class="info"
        >
          Automate this ticket with the
           
          <a
            href="/app/automation/rules/library?rule-recipe-fixture"
            rel="noreferrer"
            target="_blank"
          >
            my rule
          </a>
           
          rule! 
          <span>
            Here’s a preview:
          </span>
        </span>
      </div>
      <div
        class="actionsContainer"
      >
        <div
          class="buttons"
        >
          <div
            id="rule-suggestion-install-button"
          >
            <button
              aria-disabled="false"
              class="wrapper fill secondary small"
              type="button"
            >
              Install Rule
            </button>
          </div>
          <button
            aria-disabled="false"
            class="wrapper fill primary small"
            type="button"
          >
            Apply Rule & Send
          </button>
        </div>
      </div>
      <div
        class="chevron"
      >
        <i
          class="material-icons-round"
        >
          expand_less
        </i>
      </div>
    </header>
    <div
      class="container collapse show"
      style=""
    >
      <div>
        <div
          class="text"
        >
          <div>
            <div>
              Text coming from rule suggestion
            </div>
          </div>
        </div>
        <div>
          <div
            class="component action"
          >
            <div
              class="d-flex justify-content-between align-items-baseline"
            >
              <div
                class="flex-grow"
              >
                <div
                  class="d-flex align-items-center flex-wrap"
                >
                  <div
                    class="title"
                  >
                    <i
                      class="material-icons md-3 mr-1 text-secondary"
                    >
                      label
                    </i>
                    <span>
                      Add tags
                    </span>
                  </div>
                  <div
                    class="spacer"
                  />
                  <div
                    class="tagsSelect"
                  >
                    <div
                      class="d-none d-md-inline-flex align-items-center flex-wrap mr-2 mb-1 justify-content-end"
                    >
                      <span
                        class="badge-tag tagLabel badge badge-secondary"
                        style="color: rgb(128, 136, 214);"
                      >
                        <span>
                          auto-close
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleSuggestion should not display RuleSuggestion (no addon) 1`] = `<div />`;

exports[`RuleSuggestion should return correct value for getRuleSuggestionContent 1`] = `
{
  "actions": [
    {
      "arguments": {
        "tags": "auto-close",
      },
      "name": "addTags",
      "status": "pending",
      "title": "Add tags",
      "type": "user",
    },
  ],
  "text": {
    "body_html": "<div>Text coming from rule suggestion</div>",
    "body_text": "Text coming from rule suggestion",
  },
}
`;

exports[`RuleSuggestion should return correct value for getRuleSuggestionContent 2`] = `
{
  "actions": [],
  "text": undefined,
}
`;

exports[`RuleSuggestion should send internal note because no text in suggestion 1`] = `
[
  [
    "nowTimestamp",
    {
      "actions": Immutable.List [
        Immutable.Map {
          "arguments": Immutable.Map {
            "tags": "auto-close",
          },
          "name": "addTags",
          "title": "Add tags",
          "status": "pending",
          "type": "user",
        },
      ],
      "attachments": [],
      "body_html": "<div>Sent via suggested rule: <a target="_blank" href="/app/automation/rules/library?rule-recipe-fixture">my rule</a></div>",
      "body_text": "Sent via suggested rule: <a target="_blank" href="/app/automation/rules/library?rule-recipe-fixture">my rule</a>",
      "channel": "email",
      "from_agent": true,
      "macros": [],
      "meta": {
        "rule_suggestion_slug": "rule-recipe-fixture",
      },
      "public": false,
      "sender": {
        "email": "support@acme.gorgias.io",
        "id": 1,
        "name": "Acme Support",
      },
      "source": {
        "extra": {},
        "from": {
          "address": "",
          "name": "",
        },
        "type": "internal-note",
      },
      "via": "helpdesk",
    },
    null,
  ],
]
`;

exports[`RuleSuggestion should send message 1`] = `
[
  [
    "nowTimestamp",
    {
      "actions": Immutable.List [
        Immutable.Map {
          "arguments": Immutable.Map {
            "tags": "auto-close",
          },
          "name": "addTags",
          "title": "Add tags",
          "status": "pending",
          "type": "user",
        },
      ],
      "attachments": [],
      "body_html": "<div>Text coming from rule suggestion</div>",
      "body_text": "Text coming from rule suggestion",
      "channel": "email",
      "from_agent": true,
      "macros": [],
      "meta": {
        "rule_suggestion_slug": "rule-recipe-fixture",
      },
      "public": true,
      "sender": {
        "email": "support@acme.gorgias.io",
        "id": 1,
        "name": "Acme Support",
      },
      "source": {
        "extra": {},
        "from": {
          "address": "support@acme.gorgias.io",
        },
        "to": [
          {
            "address": "steve.frizeli@gmail.com",
            "name": "Steve Frizeli",
          },
        ],
        "type": "email",
      },
      "via": "helpdesk",
    },
    null,
  ],
]
`;
